【双音频信号发生器】模拟器——想要使用本地工具链编译，但还没有下64位的SDL2库，有空再搞

--- a/GUI/lvgl-simulator/CMakeLists.txt
+++ b/GUI/lvgl-simulator/CMakeLists.txt
@@ -6,13 +6,13 @@ set(UI_DIR ../UI/signalGenerator)
 string(REGEX REPLACE ".*/" "" APP "${UI_DIR}")
 
 cmake_minimum_required(VERSION 3.10)
-project(Simulator)
+project(Simulator C CXX)
 
 # 设置编译器
 set(CMAKE_C_COMPILER gcc)
 set(CMAKE_CXX_COMPILER g++)
-set(CMAKE_CXX_STANDARD 20)
-
+#set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=gnu++2a")
 # 定义路径
 set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
 set(APP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../Application)
