--- a/GUI/lvgl-simulator/CMakeLists.txt
+++ b/GUI/lvgl-simulator/CMakeLists.txt
@@ -1,5 +1,5 @@
 # ----------------------------------设置你的UI路径（选择项目）------------------------------
-set(UI_DIR ../UI/StorageOscilloscope)
+set(UI_DIR ../UI/voiceStorageAndPlay)
 # ----------------------------------设置你的UI路径（选择项目）------------------------------
 
 # 提取最后一个斜杠后的部分
