【简易存储示波器】波形界面设计基本完成,新增边框命名空间

--- a/GUI/lvgl-simulator/CMakeLists.txt
+++ b/GUI/lvgl-simulator/CMakeLists.txt
@@ -90,6 +90,8 @@ add_library(libgui STATIC
         ${BASE_SRCS}
         ${EVENTS_SRCS}
         ${UI_SRCS}
+        ../UI/StorageOscilloscope/Draw_wave.cpp
+        ../UI/StorageOscilloscope/Draw_wave.hpp
 )
 target_include_directories(libgui PUBLIC
         ${UI_DIR}
