准备切换为64位

--- a/GUI/lvgl-simulator/CMakeLists.txt
+++ b/GUI/lvgl-simulator/CMakeLists.txt
@@ -4,13 +4,13 @@ set(UI_DIR ../UI/StorageOscilloscope)
 #set(USE_STATIC_LIBRARY True)
 
 # ----------------------------------自动根据选项来配置------------------------------
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+if (CMAKE_SIZEOF_VOID_P EQUAL 8)
     message(STATUS "Building for 64-bit architecture")
     set(PLATFORM_X64 True)
-else()
+else ()
     message(STATUS "Building for 32-bit architecture")
     set(PLATFORM_X64 False)
-endif()
+endif ()
 # ----------------------------------选项------------------------------
 # 提取最后一个斜杠后的部分
 string(REGEX REPLACE ".*/" "" APP "${UI_DIR}")
@@ -40,7 +40,7 @@ set(LIB_DIR ${BUILD_DIR}/lib)
 # 编译选项
 # 开-O2和-O3有时候会卡死，但相同情况下真机没有问题
 
-add_compile_options(-O2 -g -DLV_CONF_INCLUDE_SIMPLE=1 )
+add_compile_options(-O2 -g -DLV_CONF_INCLUDE_SIMPLE=1)
 
 # 设置 C++ 编译器的特定选项
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fconcepts")
@@ -114,10 +114,16 @@ target_link_libraries(libgui PUBLIC liblvgl librender)
 set_target_properties(libgui PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR})
 
 
+# 链接外部库
+set(LIBRARIES SDL2)
+set(SDL2_INCLUDE_DIR ${SIMULATOR_DIR}/SDL2/i686-w64-mingw32/include)
+set(SDL2_BIN_DIR ${SIMULATOR_DIR}/SDL2/i686-w64-mingw32/bin)
+set(SDL2_LIB_DIR ${SIMULATOR_DIR}/SDL2/i686-w64-mingw32/lib)
+
 
 # --------资源文件-------
-if(USE_STATIC_LIBRARY)
-    file(GLOB_RECURSE SOURCE ${SIMULATOR_DIR}/main.cpp )
+if (USE_STATIC_LIBRARY)
+    file(GLOB_RECURSE SOURCE ${SIMULATOR_DIR}/main.cpp)
 else ()
     file(GLOB_RECURSE SOURCE
             ${SIMULATOR_DIR}/main.cpp
@@ -134,7 +140,6 @@ else ()
             ${EVENTS_SRCS}
             ${UI_SRCS}
             ../UI/StorageOscilloscope/Draw_wave.cpp
-            ../UI/StorageOscilloscope/Draw_wave.hpp
     )
     include_directories(
             #lvgl
@@ -146,7 +151,9 @@ else ()
             ${SIMULATOR_DIR}/lv_drivers
             ${SIMULATOR_DIR}
             ${LVGL_DIR}
-            ${SIMULATOR_DIR}/SDL2/i686-w64-mingw32/include
+
+            #SDL2
+            ${SDL2_INCLUDE_DIR}
 
             # GUI
             ${RENDER_DIR}
@@ -158,31 +165,26 @@ else ()
     )
 endif ()
 
-# 链接外部库
-set(LIBRARIES   SDL2)
-set(SDL2_BIN_DIR ${SIMULATOR_DIR}/SDL2/i686-w64-mingw32/bin)
-set(SDL2_LIB_DIR ${SIMULATOR_DIR}/SDL2/i686-w64-mingw32/lib)
-set(LIBFILE_PATH resource/lib/native)
-# 全局设置应该链接的库的目录
-link_directories(${LIBFILE_PATH} ${SDL2_LIB_DIR})
 
+# 全局设置应该链接的库的目录
+link_directories(${SDL2_LIB_DIR})
 
 # -----------------创建可执行文件-----------------
 add_executable(${PROJECT_NAME} ${SOURCE})
 # 动态库或者可执行文件的生成位置
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
 
-if(USE_STATIC_LIBRARY)
-target_link_libraries(${PROJECT_NAME} PRIVATE libdriver libgui ${LIBRARIES})
+if (USE_STATIC_LIBRARY)
+    target_link_libraries(${PROJECT_NAME} PRIVATE libdriver libgui ${LIBRARIES})
 else ()
-    target_link_libraries(${PROJECT_NAME} PRIVATE   ${LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBRARIES})
 endif ()
 
 # 使用 configure_file 只有当源文件发生变化时才会复制（在CMakelists阶段操作）
 configure_file(${SDL2_BIN_DIR}/SDL2.dll ${BIN_DIR}/SDL2.dll COPYONLY)
 
 
-if(CMAKE_TOOLCHAIN_FILE)
+if (CMAKE_TOOLCHAIN_FILE)
     message(STATUS "Using toolchain file: ${CMAKE_TOOLCHAIN_FILE}")
-endif()
+endif ()
 
