【重制：双音频信号发生器】初始界面没有问题，但播放按钮有问题

--- a/GUI/lvgl-simulator/CMakeLists.txt
+++ b/GUI/lvgl-simulator/CMakeLists.txt
@@ -1,5 +1,5 @@
 # ----------------------------------设置你的UI路径（选择项目）------------------------------
-set(UI_DIR ../UI/StorageOscilloscope)
+set(UI_DIR ../UI/signalGenerator)
 # ----------------------------------选项------------------------------
 #set(USE_STATIC_LIBRARY True)
 
